--- a/src/main/resources/assets/royalcrown/lang/en_us.json
+++ b/src/main/resources/assets/royalcrown/lang/en_us.json
@@ -1,56 +1,56 @@
 {
-  "item.royalcrown.crown": "Royal Crown",
+  "item.royalcrown.crown": "King's Crown",
 
   "screen.royalcrown.advisor.title": "Advisor",
   "screen.royalcrown.advisor.tooltip.close": "Close",
-
-  "button.royalcrown.advisor.intro1": "Pleasure to meet you",
-  "button.royalcrown.advisor.intro2": "Then declare me King",
-  "button.royalcrown.advisor.intro3": "Tell me what to do",
-  "button.royalcrown.advisor.intro4": "Absolutely!",
-  "button.royalcrown.advisor.status": "Got it",
-  "button.royalcrown.advisor.claim1": "Continue",
-  "button.royalcrown.advisor.claim2": "Become King",
-  "button.royalcrown.advisor.farewell1": "Continue",
-  "button.royalcrown.advisor.farewell2": "Farewell, my Advisor",
-  "button.royalcrown.advisor.farewell3": "I will await your news",
-
-  "screen.royalcrown.advisor.intro1.text": "Hello, brave warrior. I am the Royal Advisor of the Colony.",
-  "screen.royalcrown.advisor.intro2.text": "I heard about this new colony, and I also heard that you are the chief around here. Well, even if you are the chief, you are not yet a King.",
-  "screen.royalcrown.advisor.intro3.text": "Ho ho, ho! My friend, let's take it easy. Though becoming King is the dream of many, few are worthy of bearing this Noble Title! Will you be able to prove yourself?",
-  "screen.royalcrown.advisor.intro4.text": "To be crowned, you must:\n• Have at least %s citizens in the colony;\n• Complete %s defenses near the colony.\n\nSo then, do you think you can prove your worth to this colony?",
-  "screen.royalcrown.advisor.status.text": "You have not yet proven your worth; come back after completing the objectives!\n\nProgress:\n• Citizens: %s/%s\n• Defenses: %s/%s",
-  "screen.royalcrown.advisor.claim1.text": "Impressive! You have proven yourself worthy enough to lead your people as a true King.",
-  "screen.royalcrown.advisor.claim2.text": "Therefore, as the Royal Advisor, I hereby declare you King!",
-  "screen.royalcrown.advisor.farewell1.text": "Very well, my work here is done for now, Your Majesty!",
-  "screen.royalcrown.advisor.farewell2.text": "I shall return soon and, by then, I hope this colony is much more than a colony— a Kingdom! An Empire! Until then, Your Majesty!",
-  "screen.royalcrown.advisor.farewell3.text": "Hey, this is not a goodbye, Your Majesty—just a see you soon.",
   "screen.royalcrown.advisor.tooltip.skip": "Skip to accept",
 
-  "msg.royalcrown.advisor.accepted": "§bAdvisor: §fVery well! Prove your worth and speak to me again.",
-  "msg.royalcrown.advisor.farewell.departed": "The Advisor has departed on an open-ended journey, but will keep in touch.",
-  "msg.royalcrown.advisor.prearrival": "An Advisor has heard rumors of a new Colony; he will arrive shortly.",
-  "msg.royalcrown.advisor.arrived": "The Advisor has arrived! Look for him around the Town Hall.",
+  "button.royalcrown.advisor.intro1": "An honor to meet thee",
+  "button.royalcrown.advisor.intro2": "Proclaim me King",
+  "button.royalcrown.advisor.intro3": "Tell me what must be done",
+  "button.royalcrown.advisor.intro4": "I am ready!",
+  "button.royalcrown.advisor.status": "I understand",
+  "button.royalcrown.advisor.claim1": "Proceed",
+  "button.royalcrown.advisor.claim2": "Take the Crown",
+  "button.royalcrown.advisor.farewell1": "Proceed",
+  "button.royalcrown.advisor.farewell2": "Farewell, my Advisor",
+  "button.royalcrown.advisor.farewell3": "I shall await thy word",
+
+  "screen.royalcrown.advisor.intro1.text": "Greetings, valiant traveler. I am the Royal Advisor to this colony.",
+  "screen.royalcrown.advisor.intro2.text": "Rumor has reached mine ears of this new colony — and they say thou art its leader. Yet leadership is no crown.",
+  "screen.royalcrown.advisor.intro3.text": "Ho, ho! Prudence. To seek the crown is the dream of many; few prove worthy of the Noble Title. Wilt thou be one of them?",
+  "screen.royalcrown.advisor.intro4.text": "To be crowned, thou must:\n• Have at least %s citizens in the colony;\n• Complete %s defenses near the colony.\n\nWilt thou prove thy worth?",
+  "screen.royalcrown.advisor.status.text": "Thou hast not yet proven thy worth. Return once thy tasks are complete!\n\nProgress:\n• Citizens: %s/%s\n• Defenses: %s/%s",
+  "screen.royalcrown.advisor.claim1.text": "Splendid! Thou hast shown thyself worthy to lead thy people as a true King.",
+  "screen.royalcrown.advisor.claim2.text": "In the name of the Crown, I proclaim thee King!",
+  "screen.royalcrown.advisor.farewell1.text": "Very well — for now my duty here is done, Your Majesty.",
+  "screen.royalcrown.advisor.farewell2.text": "I shall return anon; till then, may this colony bloom into a Kingdom — yea, an Empire. Fare thee well!",
+  "screen.royalcrown.advisor.farewell3.text": "This is no farewell, Your Majesty — only a brief parting.",
+
+  "msg.royalcrown.advisor.accepted": "§bAdvisor: §fVery well! Prove thy worth and return to me.",
+  "msg.royalcrown.advisor.farewell.departed": "The Advisor has departed on a journey of uncertain length, yet he shall keep in touch.",
+  "msg.royalcrown.advisor.prearrival": "The Royal Advisor has heard tell of a new colony. He shall arrive shortly.",
+  "msg.royalcrown.advisor.arrived": "The Advisor has arrived! Seek him near the Town Hall.",
   "msg.royalcrown.status": "§eProgress — Citizens: %s/%s | Defenses: %s/%s",
   "msg.royalcrown.ready": "§6Trials complete! Speak with the §bRoyal Advisor§6 near the Town Hall to claim the Crown.",
   "msg.royalcrown.defense_done_both": "§aDefense complete! (%s/%s)  §7Citizens: %s/%s",
   "msg.royalcrown.defense_done": "§aDefense complete! (%s/%s)",
   "msg.royalcrown.defense_progress": "§7Defense progress: %s/%s",
-  "msg.royalcrown.crowned_toast": "§6You have claimed the Royal Crown!",
+  "msg.royalcrown.crowned_toast": "§6Thou hast claimed the Royal Crown!",
 
   "entity.royalcrown.royal_advisor": "§bRoyal Advisor",
 
-  "cmd.royalcrown.advisor.where.th": "§bAdvisor: §fLook around the Town Hall at §e(%s, %s, %s)§f.",
-  "cmd.royalcrown.advisor.where.not_found": "§bAdvisor: §fI couldn't find him nearby. He usually stays close to the Town Hall.",
-  "cmd.royalcrown.advisor.where.here": "§bAdvisor: §fI'm here: §e(%s, %s, %s)§f!",
+  "cmd.royalcrown.advisor.where.th": "§bAdvisor: §fSeek around the Town Hall at §e(%s, %s, %s)§f.",
+  "cmd.royalcrown.advisor.where.not_found": "§bAdvisor: §fI found him not nearby. He oft lingers near the Town Hall.",
+  "cmd.royalcrown.advisor.where.here": "§bAdvisor: §fI am here: §e(%s, %s, %s)§f!",
 
-  "adv.royalcrown.root.title": "A New Empire? Perhaps...",
-  "adv.royalcrown.root.desc": "Reach level 1 with your colony's Town Hall",
+  "adv.royalcrown.root.title": "A New Empire? Perchance...",
+  "adv.royalcrown.root.desc": "Raise thy Colony's Town Hall to Level 1",
 
   "adv.royalcrown.advisor.title": "An Advisor and a Future King",
-  "adv.royalcrown.advisor.desc": "Welcome the Royal Advisor to your colony",
+  "adv.royalcrown.advisor.desc": "Welcome the Royal Advisor to thy Colony",
 
-  "adv.royalcrown.accepted.title": "Prove Your Worth",
+  "adv.royalcrown.accepted.title": "Prove Thy Worth",
   "adv.royalcrown.accepted.desc": "Accept the trials and prepare to claim the crown",
 
   "adv.royalcrown.crowned.title": "Long Live the King",
