--- a/src/main/resources/assets/royalcrown/lang/pt_br.json
+++ b/src/main/resources/assets/royalcrown/lang/pt_br.json
@@ -3,57 +3,56 @@
 
   "screen.royalcrown.advisor.title": "Conselheiro",
   "screen.royalcrown.advisor.tooltip.close": "Fechar",
+  "screen.royalcrown.advisor.tooltip.skip": "Pular para aceitar",
 
-  "button.royalcrown.advisor.intro1": "Prazer em conhece-lô",
-  "button.royalcrown.advisor.intro2": "Então me declare Rei",
-  "button.royalcrown.advisor.intro3": "Diga-me o que fazer",
-  "button.royalcrown.advisor.intro4": "Com certeza!",
-  "button.royalcrown.advisor.status": "Entendi",
-  "button.royalcrown.advisor.claim1": "Continuar",
-  "button.royalcrown.advisor.claim2": "Tornar-se Rei",
-  "button.royalcrown.advisor.farewell1": "Continuar",
+  "button.royalcrown.advisor.intro1": "Honra em conhecer-vos",
+  "button.royalcrown.advisor.intro2": "Proclamai-me Rei",
+  "button.royalcrown.advisor.intro3": "Dizei-me o que devo fazer",
+  "button.royalcrown.advisor.intro4": "Estou pronto!",
+  "button.royalcrown.advisor.status": "Compreendo",
+  "button.royalcrown.advisor.claim1": "Prosseguir",
+  "button.royalcrown.advisor.claim2": "Receber a Coroa",
+  "button.royalcrown.advisor.farewell1": "Prosseguir",
   "button.royalcrown.advisor.farewell2": "Adeus, meu Conselheiro",
-  "button.royalcrown.advisor.farewell3": "Irei esperar por notícias suas",
+  "button.royalcrown.advisor.farewell3": "Aguardarei vossas notícias",
 
-  "screen.royalcrown.advisor.intro1.text": "Olá, caro guerreiro. Eu sou o Conselheiro Real da Colônia.",
-  "screen.royalcrown.advisor.intro2.text": "Ouvi dizer sobre essa nova colônia, e também ouvi dizer que você é o chefe por aqui. Bom, por mais que você seja o chefe, você ainda não é Rei.",
-  "screen.royalcrown.advisor.intro3.text": "Ho oh, ho! Meu companheiro, vamos com calma. Por mais que se tornar Rei seja o sonho de muitos, poucos são capazes de se tornarem dignos de obter este Nobre Título! Será se você conseguirá se provar?",
-  "screen.royalcrown.advisor.intro4.text": "Para ser coroado, você precisa:\n• Ter ao menos %s cidadãos na colônia;\n• Completar %s defesas perto da colônia.\n\nE então, acha que consegue provar o seu valor para essa Colônia?",
-  "screen.royalcrown.advisor.status.text": "Você ainda não provou seu valor, volte depois que completar os objetivos!\n\nProgresso:\n• Cidadãos: %s/%s\n• Defesas: %s/%s",
-  "screen.royalcrown.advisor.claim1.text": "Impressionante! Você provou que é digno o bastante de liderar seu povo como um verdadeiro Rei.",
-  "screen.royalcrown.advisor.claim2.text": "Portanto, como Conselheiro Real, eu lhe declaro, Rei!",
-  "screen.royalcrown.advisor.farewell1.text": "Muito bem, meu trabalho aqui está feito, por enquanto, vossa Majestade!",
-  "screen.royalcrown.advisor.farewell2.text": "Em breve eu retornarei e, até lá, espero que esta colônia seja muito mais do que uma colônia, e sim um Reino! Um Império! Até breve, Majestade!",
-  "screen.royalcrown.advisor.farewell3.text": "Hey, isso não é um adeus, vossa Majestade, é apenas um até logo.",
-  "screen.royalcrown.advisor.tooltip.skip": "Pular diálogo",
+  "screen.royalcrown.advisor.intro1.text": "Saudações, valoroso aventureiro. Sou o Conselheiro Real desta colônia.",
+  "screen.royalcrown.advisor.intro2.text": "Chegaram-me rumores desta nova colônia — e dizem que vós sois seu líder. Contudo, liderança não é coroa.",
+  "screen.royalcrown.advisor.intro3.text": "Ho, ho! Prudência. Almejar a coroa é o sonho de muitos; poucos mostram-se dignos do Nobre Título. Mostrar-vos-eis digno?",
+  "screen.royalcrown.advisor.intro4.text": "Para serdes coroado, cumpri:\n• Alcançar ao menos %s cidadãos na colônia;\n• Concluir %s defesas nos arredores da colônia.\n\nProvar-vos-eis digno?",
+  "screen.royalcrown.advisor.status.text": "Ainda não provastes vosso valor. Retornai quando cumprirdes os objetivos!\n\nProgresso:\n• Cidadãos: %s/%s\n• Defesas: %s/%s",
+  "screen.royalcrown.advisor.claim1.text": "Magnífico! Provastes ser digno de conduzir vosso povo como um verdadeiro Rei.",
+  "screen.royalcrown.advisor.claim2.text": "Em nome da Coroa, proclamo-vos Rei!",
+  "screen.royalcrown.advisor.farewell1.text": "Muito bem — por ora, cumpre-se meu dever aqui, Vossa Majestade.",
+  "screen.royalcrown.advisor.farewell2.text": "Retornarei em breve; até lá, que esta colônia floresça em Reino — e, quiçá, em Império. Até breve, Majestade!",
+  "screen.royalcrown.advisor.farewell3.text": "Isto não é um adeus, Majestade; apenas um até logo.",
 
-  "msg.royalcrown.advisor.accepted": "§bConselheiro: §fMuito bem! Prove seu valor e volte a falar comigo.",
-  "msg.royalcrown.advisor.farewell.departed": "O Conselheiro partiu em uma viagem por tempo indeterminado, mas manterá contato.",
-  "msg.royalcrown.advisor.prearrival": "Um Conselheiro ouviu boatos de uma nova Colônia, ele chegará em breve.",
-  "msg.royalcrown.advisor.arrived": "O Conselheiro chegou! Procure-o ao redor da Prefeitura.",
+  "msg.royalcrown.advisor.accepted": "§bConselheiro: §fMuito bem! Provai vosso valor e voltai a falar comigo.",
+  "msg.royalcrown.advisor.farewell.departed": "O Conselheiro partiu em viagem por tempo indeterminado, mas manterá contato.",
+  "msg.royalcrown.advisor.prearrival": "O Conselheiro Real ouviu rumores de uma nova colônia. Chegará em breve.",
+  "msg.royalcrown.advisor.arrived": "O Conselheiro chegou! Procurai-o nas imediações da Prefeitura.",
   "msg.royalcrown.status": "§eProgresso — Cidadãos: %s/%s | Defesas: %s/%s",
-  "msg.royalcrown.ready": "§6Provas completas! Fale com o §bConselheiro Real§6, próximo da Prefeitura, para reivindicar a Coroa.",
+  "msg.royalcrown.ready": "§6Provas completas! Falai com o §bConselheiro Real§6, próximo da Prefeitura, para reivindicar a Coroa.",
   "msg.royalcrown.defense_done_both": "§aDefesa concluída! (%s/%s)  §7Cidadãos: %s/%s",
   "msg.royalcrown.defense_done": "§aDefesa concluída! (%s/%s)",
   "msg.royalcrown.defense_progress": "§7Progresso da defesa: %s/%s",
-  "msg.royalcrown.crowned_toast": "§6Você conquistou a Coroa Real!",
+  "msg.royalcrown.crowned_toast": "§6Conquistastes a Coroa Real!",
 
   "entity.royalcrown.royal_advisor": "§bConselheiro Real",
 
-  "cmd.royalcrown.advisor.where.th": "§bConselheiro: §fProcure nas redondezas da Prefeitura em §e(%s, %s, %s)§f.",
-  "cmd.royalcrown.advisor.where.not_found": "§bConselheiro: §fNão o encontrei por perto. Ele costuma ficar próximo da Prefeitura.",
-  "cmd.royalcrown.advisor.where.here": "§bConselheiro: §fEstou aqui: §e(%s, %s, %s)§f!",
+  "cmd.royalcrown.advisor.where.th": "§bConselheiro: §fBuscai nas redondezas da Prefeitura em §e(%s, %s, %s)§f.",
+  "cmd.royalcrown.advisor.where.not_found": "§bConselheiro: §fNão o encontrei por perto. Costumo permanecer junto à Prefeitura.",
+  "cmd.royalcrown.advisor.where.here": "§bConselheiro: §fAqui estou: §e(%s, %s, %s)§f!",
 
-  "adv.royalcrown.root.title": "Um novo Império? Talvez...",
-  "adv.royalcrown.root.desc": "Alcance o nível 1 com a Prefeitura de sua Colônia",
+  "adv.royalcrown.root.title": "Um novo Império? Quiçá...",
+  "adv.royalcrown.root.desc": "Elevai a Prefeitura de vossa Colônia ao nível 1",
 
   "adv.royalcrown.advisor.title": "Um Conselheiro e um Futuro Rei",
-  "adv.royalcrown.advisor.desc": "Receba o Conselheiro Real em sua Colônia",
+  "adv.royalcrown.advisor.desc": "Recebei o Conselheiro Real em vossa Colônia",
 
-  "adv.royalcrown.accepted.title": "Prove seu Valor",
-  "adv.royalcrown.accepted.desc": "Aceite as provas e prepare-se para conquistar a coroa",
+  "adv.royalcrown.accepted.title": "Provai Vosso Valor",
+  "adv.royalcrown.accepted.desc": "Aceitai as provas e preparai-vos para reclamar a coroa",
 
   "adv.royalcrown.crowned.title": "Vida Longa ao Rei",
-  "adv.royalcrown.crowned.desc": "Reivindique a Coroa e torne-se o Rei"
+  "adv.royalcrown.crowned.desc": "Reclamai a Coroa e tornai-vos o Rei"
 }
-
